php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47109 Memory leak on $a->{"a"."b"} when $a is not an object
Submitted: 2009-01-15 08:37 UTC Modified: 2009-01-15 08:49 UTC
From: dmitry at zedn dot com Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.2.8 OS: *
Private report: No CVE-ID: None
 [2009-01-15 08:37 UTC] dmitry at zedn dot com
Description:
------------
The following code produse a memory leak

Reproduce code:
---------------
<?php
$a->{'a'.'b'};
?>

Expected result:
----------------
Notice: Undefined variable: a

Notice: Trying to get property of non-object


Actual result:
--------------
Notice: Undefined variable: a

Notice: Trying to get property of non-object
[Thu Jan 15 11:36:45 2009]  Script:  '-'
/home/dmitry/php/php5.3/Zend/zend_operators.c(1269) :  Freeing 0x0AA20F64 (3 bytes), script=-
=== Total 1 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-01-15 08:49 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC