Fixed bug #47109 (Memory leak on $a->{"a"."b"} when $a is not an object)